jim - October 31, 2006
	* Cleaned up bootscripts removed uneeded patch
	* Renamed lfs dir to clfs to keep it with our standards
	* Added the ability to have network subinterfaces

jim - October 24, 2006
	* Added IP Address of Interface on IFUP Error message
	* Fixed Logging. Would hang because of an empty variable

jim - September 24, 2006
        * Changed LFS to CLFS
	* Added Logging Feature back to the bootscripts

jim - September 2, 2006
        * Add a check to see if the interface is already disabled
        * Add a check to see if the interface is already setup

jim - August 27, 2006
	* Added the same change to ifdown script. 

jeremy - August 21, 2006
	* Logic error in ifup script - output of ip link show always shows
	  all interfaces - added a grep to only look at the interface we're
	  interested in

jim - July 27, 2006
	* Corrected install-minimal symlinks

jim - June 29, 2006
	* Disable interactive Prompts
	* Added Check to see if /etc/sysconfig/createfiles is available

jim - May 15, 2006
	* Hide all the output information from the LCD Program
	* Added support for 1 line LCD screens
	* Added a generic sysconfig/lcd

jim - May 10, 2006
	* Fixed an error when the LCD device is not available

jim - May 9, 2006
	* Added support for LCD Screens
	* Added support for RaQ3 LCD and Cobalt Panel Utils

This is a new Changelog. The old one is now renamed to CHANGELOG.old.
These scripts are based on LFS-Bootscripts 3.2.2
