@@ -1,3 +1,6 @@
+jim - September 10, 2007
+	* Moved udev script from udev package since udev package is no longer required
+
 jim - October 31, 2006
 	* Cleaned up bootscripts removed uneeded patch
 	* Renamed lfs dir to clfs to keep it with our standards
